Kubernetes/Fastapi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  labels:
    type: back-end
spec: 
  replicas: 1
  selector:
    matchLabels:
      type: back-end
  template:
    metadata:
      name: fastapi-pod
      labels:
        type: back-end
    spec:
      containers:
        - name: fastapi
          image: local-fastapi
          imagePullPolicy: Never
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: "/Fetch_Map"
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
  
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    type: back-end
  ports:
  - port: 8000
    targetPort: 8000
