Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
         service:
          name: fastapi-service
          port:
           number: 8000
